# mpt-extension-sdk

./: .env.demo  .env.sample  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  README.md  compose.demo.yaml  compose.yaml  dev.Dockerfile  docker-compose.yml  makefile  prod.Dockerfile  pyproject.toml  setup.cfg  setup.py  sonar-project.properties
.github/: dependabot.yml
.github/workflows/: on-release.yml  pr-build-merge.yml  release.yml
docs/: PROJECT_DESCRIPTION.md  architecture.md  configuration.md  contributing.md  documentation.md  local-development.md  migrations.md  testing.md  usage.md
docs/sdk_usage/: api.md  application.md  cli.md  contexts-and-pipelines.md  error-handling.md  events.md  immutable-snapshots.md  marketplace-services.md  observability.md  plugs.md  settings.md
docs/superpowers/plans/: 2026-06-19-dotnet-sdk-plan1-foundation-and-native-hosting.md  2026-06-19-dotnet-sdk-plan2-ziti-transport.md  2026-06-19-dotnet-sdk-plan3-port-producthub.md
docs/superpowers/specs/: 2026-06-19-dotnet-extension-sdk-design.md
make/: common.mk  repo.mk
mock_app/: app.py  context.py  pipelines.py  settings.py  steps.py
mock_app/api/: api_routes.py  pipelines.py  routes.py  schemas.py  steps.py
mock_app/api/routes/: api.py  event.py  events.py
mock_app/docs/: example.http  postman_collection.json
mock_app/mocks/: api_service.py
mock_app/sync/: agreements.py
mpt_extension_sdk/: __init__.py  constants.py  context.py  decorators.py  extension_app.py  extension_validator.py  jwt.py  schemas.py
mpt_extension_sdk/airtable/: wrap_http_error.py
mpt_extension_sdk/api/: __init__.py  context.py  error_mapping.py  errors.py  pagination.py  responses.py  router.py
mpt_extension_sdk/api/auth/: __init__.py  constants.py  context.py  service.py
mpt_extension_sdk/api/builders/: __init__.py  api.py  arguments.py  dependencies.py  errors.py  event.py  execution.py  validation.py
mpt_extension_sdk/api/models/: base.py  errors.py  events.py
mpt_extension_sdk/cli/: main.py
mpt_extension_sdk/core/: extension.py  security.py  utils.py  utils_a.py
mpt_extension_sdk/core/events/: dataclasses.py  registry.py
mpt_extension_sdk/errors/: pipeline.py
mpt_extension_sdk/flows/: context.py  pipeline.py
mpt_extension_sdk/key_vault/: base.py
mpt_extension_sdk/models/: __init__.py  account.py  address.py  agreement.py  asset.py  audit.py  authorization.py  base.py  contact.py  extension.py  installation.py  licensee.py  order.py  parameter.py  price.py  product.py  status.py  subscription.py  task.py
mpt_extension_sdk/mpt_http/: base.py  mpt.py  mpt_a.py  utils.py  wrap_http_error.py
mpt_extension_sdk/observability/: __init__.py  bootstrap.py  config.py  decorators.py  tracing.py
mpt_extension_sdk/pipeline/: __init__.py  base.py  decorators.py  factory.py  step.py
mpt_extension_sdk/pipeline/context/: agreement.py  base.py  event.py  factory.py  order.py
mpt_extension_sdk/routing/: __init__.py  enums.py  models.py  plugs.py  routers.py  types.py
mpt_extension_sdk/routing/routers/: api.py  base.py  event.py  plug.py  schedule.py
mpt_extension_sdk/runtime/: __init__.py  app.py  builders.py  errors.py  initializer.py  logging.py  main.py  master.py  models.py  runner.py  swoext.py  tracer.py  utils.py  version.py  workers.py
mpt_extension_sdk/runtime/bootstrap/: client.py  identity.py  registration.py
mpt_extension_sdk/runtime/commands/: django.py  run.py
mpt_extension_sdk/runtime/djapp/: apps.py  middleware.py
mpt_extension_sdk/runtime/events/: dispatcher.py  producers.py  utils.py
mpt_extension_sdk/services/api_client_v2/: mpt_api_client.py
mpt_extension_sdk/services/mpt_api_service/: __init__.py  account_scoped.py  account_scoped_client.py  account_token.py  agreement.py  api_service.py  asset.py  base.py  client_factory.py  extension.py  factory.py  installation.py  order.py  product.py  subscription.py  task.py  template.py
mpt_extension_sdk/settings/: base.py  extension.py  runtime.py
mpt_extension_sdk/swo_rql/: __init__.py  constants.py  query_builder.py
tests/: conftest.py  test_decorators.py  test_extension_app.py  test_jwt.py
tests/airtable/: test_wrap_http_error.py
tests/api/: test_error_mapping.py  test_models.py  test_pagination.py  test_responses.py  test_router.py
tests/api/builders/: test_api.py  test_dependencies.py  test_event.py
tests/api/models/: test_events.py
tests/auth/: test_context.py  test_service.py
tests/cli/: test_main.py
tests/core/: test_core_registry.py  test_core_utils.py  test_core_utils_a.py  test_security.py  test_utils.py
tests/core/events/: test_registry.py
tests/django/: settings.py
tests/errors/: test_mapping.py
tests/flows/: test_context.py  test_pipeline.py
tests/key_vault/: test_base.py  test_key_vault.py
tests/models/: test_account.py  test_asset.py  test_audit.py  test_base.py  test_order.py  test_parameter.py  test_status.py
tests/mpt/: conftest.py  test_error.py  test_mpt.py  test_mpt_a.py
tests/mpt_http/: conftest.py  test_base.py  test_mpt.py  test_utils.py  test_wrap_http_error.py
tests/observability/: test_bootstrap.py  test_tracing.py
tests/pipeline/: test_base.py  test_contexts.py  test_decorators.py  test_factory.py  test_step.py
tests/pipeline/context/: test_agreement.py  test_order.py
tests/routing/: test_routers.py
tests/routing/routers/: conftest.py  test_api.py  test_event.py  test_plug.py  test_schedule.py
tests/runtime/: initializer.py  test_app.py  test_apps.py  test_builders.py  test_initializer.py  test_logging.py  test_main.py  test_master.py  test_models.py  test_runner.py  test_runtime_app.py  test_runtime_master.py  test_runtime_utils.py  test_runtime_workers.py  test_swoext.py  test_tracer.py  test_utils.py  test_workers.py
tests/runtime/bootstrap/: test_client.py  test_identity.py  test_registration.py
tests/runtime/commands/: test_run.py
tests/runtime/djapp/: test_apps.py
tests/settings/: test_base.py  test_extension.py  test_runtime.py
tests/swo_rql/: test_expressions.py  test_rql_base.py
(+27 files in other folders)
