[project]
name = "mpt-extension-sdk"
version = "4.1.1"
description = "Extensions SDK for SoftwareONE Marketplace Platform"
authors = [{ name = "SoftwareOne AG" }]
requires-python = ">=3.12,<4"
readme = "docs/PROJECT_DESCRIPTION.md"
license = {text = "Apache-2.0 license"}
dependencies = [
    "azure-identity==1.25.*",
    "azure-keyvault-secrets==4.10.*",
    "azure-monitor-opentelemetry-exporter==1.0.0b46",
    "click==8.3.*",
    "debugpy==1.8.*",
    "django==4.2.*",
    "django-ninja==1.1.*",
    "gunicorn==25.1.*",
    "opentelemetry-api==1.39.0",
    "opentelemetry-instrumentation-django==0.60.*",
    "opentelemetry-instrumentation-logging==0.60.*",
    "opentelemetry-instrumentation-requests==0.60.*",
    "opentelemetry-sdk==1.39.0",
    "pyfiglet==1.0.*",
    "pyjwt==2.11.*",
    "requests==2.32.*",
    "rich==14.3.*",
    "typing-extensions==4.15.*",
    "uvicorn-worker==0.4.*",
    "watchfiles==1.1.*",
]

[project.scripts]
swoext = "mpt_extension_sdk.runtime.swoext:main"

[project.entry-points."swo.mpt.sdk"]
app_config = "mpt_extension_sdk.runtime.djapp.apps:ExtensionConfig"

[dependency-groups]
dev = [
    "flake8==7.3.*", # force flake8 version to have same formatting everywhere, also update in pre-commit config
    "flake8-aaa==0.17.*", # also update pre-commit config
    "flake8-pyproject==1.2.*", # also update pre-commit config
    "freezegun==1.5.*",
    "ipdb==0.13.*",
    "ipython==9.*",
    "mypy==1.19.*",
    "pre-commit==4.5.*",
    "pytest==9.0.*",
    "pytest-cov==7.0.*",
    "pytest-deadfixtures==3.1.*",
    "pytest-django==4.12.*",
    "pytest-mock==3.15.*",
    "pytest-randomly==4.0.*",
    "pytest-xdist==3.8.*",
    "responses==0.26.*",
    "ruff==0.15.4", # force ruff version to have same formatting everywhere, also update in pre-commit config
    "types-openpyxl==3.1.*",
    "types-requests==2.32.*",
    "wemake-python-styleguide==1.6.*", # also update pre-commit config
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["mpt_extension_sdk/**", "docs/PROJECT_DESCRIPTION.md"]

[tool.pytest.ini_options]
testpaths = "tests"
pythonpath = "."
addopts = "--cov=mpt_extension_sdk --cov-report=term-missing --cov-report=xml --import-mode=importlib"
DJANGO_SETTINGS_MODULE = "tests.django.settings"
log_cli = false
filterwarnings = [
    "ignore:Support for class-based `config` is deprecated:DeprecationWarning",
    "ignore:pkg_resources is deprecated as an API:DeprecationWarning",
]

[tool.coverage.run]
branch = true
relative_files = true
omit = [
  "django.py",
  "__init__.py",
]

[tool.flake8]
allowed-domain-names = ["result"]
allowed-module-metadata = ["__all__"]
aaa_act_block_style = "large"
doctests = true
extend-ignore = ["WPS226"]
extend-exclude = [
  ".coverage",
  ".github",
  ".idea",
  ".mypy_cache",
  ".pytest_cache",
  ".ruff_cache",
  "uv.lock",
  ".venv"
]
format = "wemake"
max-imports = 17
max-line-length = 100
select = ["AAA", "E999", "WPS"]
show-source = true
statistics = false
# To be fixed and removed
per-file-ignores = [
  "tests/**/*.py: WPS",
  "tests/*.py: WPS",
  "mpt_extension_sdk/core/utils.py: WPS100 WPS453",
  "mpt_extension_sdk/mpt_http/mpt.py: WPS202 WPS118 WPS211",
  "mpt_extension_sdk/mpt_http/utils.py: WPS100",
  "mpt_extension_sdk/mpt_http/wrap_http_error.py: WPS110 WPS430 WPS505",
  "mpt_extension_sdk/runtime/__init__.py: WPS412",
  "mpt_extension_sdk/runtime/djapp/conf/__init__.py: WPS412",
  "mpt_extension_sdk/airtable/wrap_http_error.py: WPS110 WPS430 WPS231 WPS505 WPS328",
  "mpt_extension_sdk/core/events/dataclasses.py: WPS110",
  "mpt_extension_sdk/flows/context.py: WPS214",
  "mpt_extension_sdk/key_vault/base.py: WPS615",
  "mpt_extension_sdk/runtime/commands/run.py: WPS400 WPS216",
  "mpt_extension_sdk/runtime/djapp/conf/default.py: WPS407",
  "mpt_extension_sdk/runtime/djapp/management/commands/consume_events.py: WPS403 WPS213 WPS110",
  "mpt_extension_sdk/runtime/djapp/middleware.py: WPS420 WPS122 WPS211 WPS121",
  "mpt_extension_sdk/runtime/errors.py: WPS453",
  "mpt_extension_sdk/runtime/events/dispatcher.py: WPS420 WPS230 WPS529",
  "mpt_extension_sdk/runtime/events/producers.py: WPS210",
  "mpt_extension_sdk/runtime/events/utils.py: WPS100 WPS430",
  "mpt_extension_sdk/runtime/initializer.py: WPS407 WPS210",
  "mpt_extension_sdk/runtime/logging.py: WPS115",
  "mpt_extension_sdk/runtime/master.py: WPS220 WPS214 WPS230",
  "mpt_extension_sdk/runtime/swoext.py: WPS110 WPS430",
  "mpt_extension_sdk/runtime/utils.py: WPS100 WPS202 WPS460 WPS210 WPS221 WPS349 WPS110 WPS430 WPS237 WPS202 WPS460",
  "mpt_extension_sdk/swo_rql/__init__.py: WPS111 WPS410 WPS412",
  "mpt_extension_sdk/swo_rql/query_builder.py: WPS210 WPS231 WPS110 WPS214 WPS115 WPS111 WPS478 WPS221 WPS211 WPS237",
]

[tool.ruff]
# Ruff config: https://docs.astral.sh/ruff/settings
preview = true
target-version = "py312"
extend-exclude=[".vscode", ".devcontainer"]
output-format = "full"
line-length = 100

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint]
select = [
    "A",    # flake8-builtins
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "C90",  # maccabe
    "COM",  # flake8-commas
    "D",    # pydocstyle
    "DTZ",  # flake8-datetimez
    "E",    # pycodestyle
    "ERA",  # flake8-eradicate
    "EXE",  # flake8-executable
    "F",    # pyflakes
    "FBT",  # flake8-boolean-trap
    "FLY",  # pyflint
    "FURB", # refurb
    "G",    # flake8-logging-format
    "I",    # isort
    "ICN",  # flake8-import-conventions
    "ISC",  # flake8-implicit-str-concat
    "LOG",  # flake8-logging
    "N",    # pep8-naming
    "PERF", # perflint
    "PIE",  # flake8-pie
    "PL",   # pylint
    "PT",   # flake8-pytest-style
    "PTH",  # flake8-use-pathlib
    "Q",    # flake8-quotes
    "RET",  # flake8-return
    "RSE",  # flake8-raise
    "RUF",  # ruff
    "S",    # flake8-bandit
    "SIM",  # flake8-simpify
    "SLF",  # flake8-self
    "SLOT", # flake8-slots
    "T100", # flake8-debugger
    "TRY",  # tryceratops
    "UP",   # pyupgrade
    "W",    # pycodestyle
    "YTT",  # flake8-2020
]
ignore = [
    "A005",   # allow to shadow stdlib and builtin module names
    "B904",  # Within an `except` clause, raise exceptions with `raise ... from err` or `raise ... from None` to distinguish them from errors in exception handling
    "COM812", # trailing comma, conflicts with `ruff format`
    # Different doc rules that we don't really care about:
    "D100",
    "D104",
    "D105", # docstring for magic methods
    "D106",
    "D107",
    "D203",
    "D212",
    "D401",
    "D404",
    "D405",
    "ISC001",  # implicit string concat conflicts with `ruff format`
    "ISC003",  # prefer explicit string concat over implicit concat
    "PLR09",   # we have our own complexity rules
    "PLR2004", # do not report magic numbers
    "PLR6301", # do not require classmethod / staticmethod when self not used
    "PT011", # pytest.raises({exception}) is too broad, set the match parameter or use a more specific exception
    "TRY003",  # long exception messages from `tryceratops`
]
external = [ "AAA", "WPS" ]

# Plugin configs:
[tool.ruff.lint.flake8-import-conventions]
banned-from = ["ast", "datetime"]
aliases = { datetime = "dt" }

[tool.ruff.lint.flake8-quotes]
inline-quotes = "double"

[tool.ruff.lint.mccabe]
max-complexity = 6

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = [
  "D103", # missing docstring in public function
  "S101", # asserts
  "S105", # hardcoded passwords
  "S404", # subprocess calls are for tests
  "S603", # do not require `shell=True`
  "S607", # partial executable paths
]
"mpt_extension_sdk/swo_rql/query_builder.py" = [
  "PLW2901", # loop variable overwritten by assignment target
]

[tool.ruff.lint.isort]
known-third-party = ["swo"]

[tool.mypy]
# The mypy configurations: http://bit.ly/2zEl9WI
enable_error_code = [
  "truthy-bool",
  "truthy-iterable",
  "redundant-expr",
  "unused-awaitable",
  "ignore-without-code",
  "possibly-undefined",
  "redundant-self",
  "explicit-override",
  "mutable-override",
  "unimported-reveal",
  "deprecated",
]
exclude = ["tests"]
exclude_gitignore = true
ignore_missing_imports = true
local_partial_types = true
strict = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = "django.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pyfiglet.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "gunicorn.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pymsteams.*"
ignore_missing_imports = true
