[project]
name = "mpt-extension-sdk"
version = "6.0.0"
description = "Extensions SDK for SoftwareONE Marketplace Platform"
authors = [{ name = "SoftwareOne AG" }]
requires-python = ">=3.12,<4"
readme = "docs/usage.md"
license = {text = "Apache-2.0 license"}
dependencies = [
    "fastapi[standard]==0.136.*",
    "mpt-api-client==6.3.*",
    "mrok==0.10.2",
    "opentelemetry-api==1.40.0",
    "opentelemetry-exporter-otlp-proto-http==1.40.0",
    "opentelemetry-instrumentation-fastapi==0.61b0",
    "opentelemetry-instrumentation-httpx==0.61b0",
    "opentelemetry-instrumentation-logging==0.61b0",
    "opentelemetry-sdk==1.40.0",
    "pydantic==2.13.*",
    "typer==0.26.*",
]

[dependency-groups]
dev = [
    "types-pyyaml>=6.0.12.20260408",
    "flake8==7.3.*", # force flake8 version to have same formatting everywhere, also update in pre-commit config
    "flake8-aaa==0.17.*", # also update pre-commit config
    "flake8-pyproject==1.2.*", # also update pre-commit config
    "freezegun==1.5.*",
    "ipdb==0.13.*",
    "ipython==9.*",
    "mypy==2.1.*",
    "pre-commit==4.6.*",
    "pytest==9.1.*",
    "pytest-asyncio==1.4.*",
    "pytest-cov==7.1.*",
    "pytest-deadfixtures==3.1.*",
    "pytest-mock==3.15.*",
    "pytest-randomly==4.1.*",
    "pytest-xdist==3.8.*",
    "ruff==0.15.20", # force ruff version to have same formatting everywhere, also update in pre-commit config
    "wemake-python-styleguide==1.6.*", # also update pre-commit config
]

[project.optional-dependencies]
azure-monitor = [
  "azure-monitor-opentelemetry-exporter==1.0.0b51",
]

[project.scripts]
mpt-ext = "mpt_extension_sdk.cli.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["mpt_extension_sdk/**", "docs/usage.md"]

[tool.pytest.ini_options]
testpaths = "tests"
pythonpath = "."
addopts = "--cov=mpt_extension_sdk --cov-report=term-missing --cov-report=xml --import-mode=importlib"
log_cli = false
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
filterwarnings = [
    "ignore:Support for class-based `config` is deprecated:DeprecationWarning",
    "ignore:pkg_resources is deprecated as an API:DeprecationWarning",
]

[tool.coverage.run]
branch = true
relative_files = true

[tool.coverage.report]
exclude_also = [
    "if __name__ == \"__main__\":",
    "raise NotImplementedError",
]
omit = [
  "__init__.py",
  "mpt_extension_sdk/services/api_client_v2/**",
]

[tool.flake8]
allowed-domain-names = ["result"]
allowed-module-metadata = ["__all__"]
aaa_act_block_style = "large"
doctests = true
extend-ignore = ["WPS226"]
extend-exclude = [
  ".coverage",
  ".github",
  ".idea",
  ".mypy_cache",
  ".pytest_cache",
  ".ruff_cache",
  "uv.lock",
  ".venv"
]
format = "wemake"
max-imports = 17
max-line-length = 100
select = ["AAA", "E999", "WPS"]
show-source = true
statistics = false
per-file-ignores = [
  "/*.py: WPS412",
  "tests/**: WPS202, WPS211, WPS432"
]

[tool.ruff]
# Ruff config: https://docs.astral.sh/ruff/settings
preview = true
target-version = "py312"
extend-exclude=[".vscode", ".devcontainer"]
output-format = "full"
line-length = 100

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint]
select = [
    "A",    # flake8-builtins
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "C90",  # maccabe
    "COM",  # flake8-commas
    "D",    # pydocstyle
    "DTZ",  # flake8-datetimez
    "E",    # pycodestyle
    "ERA",  # flake8-eradicate
    "EXE",  # flake8-executable
    "F",    # pyflakes
    "FBT",  # flake8-boolean-trap
    "FLY",  # pyflint
    "FURB", # refurb
    "G",    # flake8-logging-format
    "I",    # isort
    "ICN",  # flake8-import-conventions
    "ISC",  # flake8-implicit-str-concat
    "LOG",  # flake8-logging
    "N",    # pep8-naming
    "PERF", # perflint
    "PIE",  # flake8-pie
    "PL",   # pylint
    "PT",   # flake8-pytest-style
    "PTH",  # flake8-use-pathlib
    "Q",    # flake8-quotes
    "RET",  # flake8-return
    "RSE",  # flake8-raise
    "RUF",  # ruff
    "S",    # flake8-bandit
    "SIM",  # flake8-simpify
    "SLF",  # flake8-self
    "SLOT", # flake8-slots
    "T100", # flake8-debugger
    "TRY",  # tryceratops
    "UP",   # pyupgrade
    "W",    # pycodestyle
    "YTT",  # flake8-2020
]
ignore = [
    "A005",   # allow to shadow stdlib and builtin module names
    "B904",  # Within an `except` clause, raise exceptions with `raise ... from err` or `raise ... from None` to distinguish them from errors in exception handling
    "COM812", # trailing comma, conflicts with `ruff format`
    # Different doc rules that we don't really care about:
    "D100",
    "D104",
    "D105", # docstring for magic methods
    "D106",
    "D107",
    "D203",
    "D212",
    "D401",
    "D404",
    "D405",
    "ISC001",  # implicit string concat conflicts with `ruff format`
    "ISC003",  # prefer explicit string concat over implicit concat
    "PLR09",   # we have our own complexity rules
    "PLR2004", # do not report magic numbers
    "PLR6301", # do not require classmethod / staticmethod when self not used
    "PT011", # pytest.raises({exception}) is too broad, set the match parameter or use a more specific exception
    "TRY003",  # long exception messages from `tryceratops`
]
external = [ "AAA", "WPS" ]

# Plugin configs:
[tool.ruff.lint.flake8-import-conventions]
banned-from = ["ast", "datetime"]
aliases = { datetime = "dt" }

[tool.ruff.lint.flake8-quotes]
inline-quotes = "double"

[tool.ruff.lint.mccabe]
max-complexity = 6

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/**.py" = [
  "E306", # flake8-aaa and nested test helpers conflict on blank-line expectations
  "D101", # missing docstring in public class
  "D102", # missing docstring in public method
  "D103", # missing docstring in public function
  "S101", # asserts
  "S104", # local test runtime host values
  "S105", # hardcoded passwords
  "S106", # test tokens and API keys
  "S108", # tmp paths in tests
  "S404", # subprocess calls are for tests
  "S603", # do not require `shell=True`
  "S607", # partial executable paths
  "PLC2701", # tests may reach private helpers explicitly
  "SLF001", # tests may reach private helpers explicitly
  "RUF076", # autouse fixtures are an intentional reset pattern in tests
]

[tool.ruff.lint.isort]
known-third-party = ["swo"]

[tool.mypy]
# The mypy configurations: http://bit.ly/2zEl9WI
enable_error_code = [
  "truthy-bool",
  "truthy-iterable",
  "redundant-expr",
  "unused-awaitable",
  "ignore-without-code",
  "possibly-undefined",
  "redundant-self",
  "explicit-override",
  "mutable-override",
  "unimported-reveal",
  "deprecated",
]
exclude = ["tests"]
exclude_gitignore = true
ignore_missing_imports = true
local_partial_types = true
strict = true
warn_unreachable = true
